--- a/html/threepoints1.html
+++ b/html/threepoints1.html
@@ -50,6 +50,8 @@ function calc(){
 </script>
 </head>
 <body>
+The strongest three signals:
+<br>
 a1: <input id="a1"><br>
 b1: <input id="b1"><br>
 rssi1: <input id="r1"><br>
