add return statement

--- a/html/threepoints.html
+++ b/html/threepoints.html
@@ -52,6 +52,7 @@ function calc(){
             var newx = -(x - a3) * d3_cal / diff;
             var newy = -(y - b3) * d3_cal / diff;
             document.getElementById("result").innerHTML = "x: " + newx + " y: " + newy;
+            return;
         }
     }
     alert("strange input data!");
